// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Explorer test 1`] = `
<div
  class="jsde-explorer"
>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <table
        class="jsde-table"
      >
        <thead
          class="jsde-table-head"
        >
          <tr>
            <th>
              table_key
            </th>
            <th>
              first
            </th>
            <th>
              second
            </th>
          </tr>
        </thead>
        <tbody
          class="jsde-table-body"
        >
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              1
            </td>
            <td
              class="jsde-table-cell"
            >
              one
            </td>
            <td
              class="jsde-table-cell"
            >
              first
            </td>
          </tr>
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              2
            </td>
            <td
              class="jsde-table-cell"
            >
              two
            </td>
            <td
              class="jsde-table-cell"
            >
              second
            </td>
          </tr>
        </tbody>
        <tfoot
          class="jsde-table-foot"
        >
          <tr>
            <td>
              <button>
                Load more data...
              </button>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
</div>
`;

exports[`Explorer test 2`] = `
<div
  class="jsde-explorer"
>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <table
        class="jsde-table"
      >
        <thead
          class="jsde-table-head"
        >
          <tr>
            <th>
              table_key
            </th>
            <th>
              first
            </th>
            <th>
              second
            </th>
          </tr>
        </thead>
        <tbody
          class="jsde-table-body"
        >
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              1
            </td>
            <td
              class="jsde-table-cell"
            >
              one
            </td>
            <td
              class="jsde-table-cell"
            >
              first
            </td>
          </tr>
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              2
            </td>
            <td
              class="jsde-table-cell"
            >
              two
            </td>
            <td
              class="jsde-table-cell"
            >
              second
            </td>
          </tr>
        </tbody>
        <tfoot
          class="jsde-table-foot"
        >
          <tr>
            <td>
              <button>
                Load more data...
              </button>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <form
        action="#"
        class="jsde-form"
      >
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            table_key
          </label>
          <input
            class="jsde-field__input"
            value="1"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            first
          </label>
          <input
            class="jsde-field__input"
            value="one"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            third
          </label>
          <input
            class="jsde-field__input"
            value="third"
          />
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            c1 rel
          </button>
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            child table 2
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Explorer test 3`] = `
<div
  class="jsde-explorer"
>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <table
        class="jsde-table"
      >
        <thead
          class="jsde-table-head"
        >
          <tr>
            <th>
              table_key
            </th>
            <th>
              first
            </th>
            <th>
              second
            </th>
          </tr>
        </thead>
        <tbody
          class="jsde-table-body"
        >
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              1
            </td>
            <td
              class="jsde-table-cell"
            >
              one
            </td>
            <td
              class="jsde-table-cell"
            >
              first
            </td>
          </tr>
          <tr
            class="jsde-table-row"
          >
            <td
              class="jsde-table-cell"
            >
              2
            </td>
            <td
              class="jsde-table-cell"
            >
              two
            </td>
            <td
              class="jsde-table-cell"
            >
              second
            </td>
          </tr>
        </tbody>
        <tfoot
          class="jsde-table-foot"
        >
          <tr>
            <td>
              <button>
                Load more data...
              </button>
            </td>
          </tr>
        </tfoot>
      </table>
    </div>
  </div>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <form
        action="#"
        class="jsde-form"
      >
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            table_key
          </label>
          <input
            class="jsde-field__input"
            value="2"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            first
          </label>
          <input
            class="jsde-field__input"
            value="two"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            third
          </label>
          <input
            class="jsde-field__input"
            value="second"
          />
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            c1 rel
          </button>
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            child table 2
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Explorer test 4`] = `
<div
  class="jsde-explorer"
>
  <div
    class="jsde-panel"
  >
    <button
      class="jsde-panel__close"
    />
    <div
      class="jsde-panel-body"
    >
      <form
        action="#"
        class="jsde-form"
      >
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            table_key
          </label>
          <input
            class="jsde-field__input"
            value="2"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            first
          </label>
          <input
            class="jsde-field__input"
            value="two"
          />
        </div>
        <div
          class="jsde-field"
        >
          <label
            class="jsde-field__label"
          >
            third
          </label>
          <input
            class="jsde-field__input"
            value="second"
          />
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            c1 rel
          </button>
        </div>
        <div
          class="jsde-relationship"
        >
          <button
            class="jsde-relationship__label"
          >
            child table 2
          </button>
        </div>
      </form>
    </div>
  </div>
</div>
`;

exports[`Form panel test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel-body"
  >
    <form
      action="#"
      class="jsde-form"
    />
  </div>
</div>
`;

exports[`Table panel test 1`] = `
<div
  class="jsde-panel"
>
  <button
    class="jsde-panel__close"
  />
  <div
    class="jsde-panel-body"
  >
    <table
      class="jsde-table"
    >
      <thead
        class="jsde-table-head"
      >
        <tr />
      </thead>
      <tbody
        class="jsde-table-body"
      />
      <tfoot
        class="jsde-table-foot"
      >
        <tr>
          <td>
            <button>
              Load more data...
            </button>
          </td>
        </tr>
      </tfoot>
    </table>
  </div>
</div>
`;
